🎉 - Fixed vertical scrolling having dual scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
 .App {
   background-color: #282c34;
   min-height: 100dvh;
-  min-width: 100dvw;
+  min-width: 99dvw;
   display: flex;
   flex-direction: column;
   font-size: calc(10px + 2vmin);
